[metadata]
name = autobib
version = attr: autobib.__version__
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Automatically download missing entries to your bibliography file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/autobib
project_urls =
    Bug Tracker = https://github.com/hdembinski/autobib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = autobib
python_requires = >=3.7
install_requires =
  requests

[options.entry_points]
console_scripts =
    bibtex = autobib:main

[options.extras_require]
test = pytest; pre-commit

[flake8]
max-line-length = 90
ignore = E203
