[metadata]
name = autobib
version = attr: autobib._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Automatically download missing entries to your bibliography file.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hdembinski/autobib
project_urls =
    Bug Tracker = https://github.com/hdembinski/autobib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: MacOS X
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Scientific/Engineering
    Topic :: Text Processing :: Markup :: LaTeX

[options]
packages = autobib
python_requires = >=3.7

[options.entry_points]
console_scripts =
    bibtex-autobib = autobib:main

[options.extras_require]
test = pytest; pre-commit; types-setuptools

[flake8]
max-line-length = 90
ignore = E203,W503
